--- a/locales/ja.yml
+++ b/locales/ja.yml
@@ -319,7 +319,7 @@ config_page:
             label: "ひらがなを表示"
         telemetry:
             label: "製品の改善に協力する"
-            desc: "みなさんの使用状況データを、開発者が数字を見てにやにやするので、オン（送信する）にしたままだと嬉しいです。\n※個人を特定するような情報は収集しません。\n※ちゃんと開発に役立てます。"
+            desc: "開発者が「みんな使ってくれてるんだな～」ってにやにやしながら機能改善するための使用状況データを送信します。\n※会話内容など個人情報は一切送信しません。"
 
     hotkeys:
         toggle_vrct_visibility:
