[Update] 中国語の表記を「中国」から「簡体字中国」と「繁体字中国」に変更

--- a/src-python/models/translation/translation_settings/languages/languages.yml
+++ b/src-python/models/translation/translation_settings/languages/languages.yml
@@ -711,7 +711,8 @@ OpenAI_API:
     Bosnian: Bosnian
     Bulgarian: Bulgarian
     Catalan: Catalan
-    Chinese: Chinese
+    Chinese Simplified: Chinese Simplified
+    Chinese Traditional: Chinese Traditional
     Croatian: Croatian
     Czech: Czech
     Danish: Danish
