--- a/locales/zh-Hant.yml
+++ b/locales/zh-Hant.yml
@@ -355,10 +355,34 @@ config_page:
             label: "切換 VRCT CPU/GPU 版本"
         enable_websocket:
             label: "啟用 WebSocket 伺服器"
+            locked_by_obs_browser_source: "請先停用 OBS 瀏覽器來源再變更此項"
         websocket_host:
             label: "WebSocket 主機"
         websocket_port:
             label: "WebSocket 連接埠"
+        obs_browser_source:
+            section_label: "OBS 瀏覽器來源"
+        enable_obs_browser_source:
+            label: "啟用 OBS 瀏覽器來源"
+            desc: "為 OBS（瀏覽器來源）提供本機疊加頁面，顯示翻譯並在一段時間後淡出。"
+        obs_browser_source_url:
+            label: "OBS URL（點擊複製）"
+        obs_browser_source_port:
+            label: "OBS 連接埠"
+        obs_browser_source_max_messages:
+            label: "最大訊息數"
+        obs_browser_source_display_duration:
+            label: "顯示時間（秒）"
+        obs_browser_source_fadeout_duration:
+            label: "淡出時間（秒）"
+        obs_browser_source_font_size:
+            label: "字體大小（px）"
+        obs_browser_source_font_color:
+            label: "字體顏色（#RRGGBB）"
+        obs_browser_source_font_outline_thickness:
+            label: "描邊粗細（px）"
+        obs_browser_source_font_outline_color:
+            label: "描邊顏色（#RRGGBB）"
 
     notifications:
         save_success: "設定已儲存。"
